--- a/06_01_22_Calculator_2.html
+++ b/06_01_22_Calculator_2.html
@@ -16,7 +16,7 @@
             <td colspan="4"><p id="screen"> </p></td>
         </tr>
         <tr>
-            <td><input type="button" id = "1" value="1" onclick="i1()" ></td>
+            <td><button type="button" id = "1" value="1" onclick="i1()" ></td>
             <td><input type="button" id = "2" value="2" onclick="i2()"></td>
             <td><input type="button" id = "3" value="3" onclick="i3()"></td>
             <td><input type="button" id = "+" value="+" onclick="i3()"></td>
